//
//  UltimatePortfolioUITests.swift
//  UltimatePortfolioUITests
//
//  Created by Brandon Johns on 1/30/24.
//

import XCTest

extension XCUIElement {
    func clear() {
        // checks that value is a string
        guard let stringValue = self.value as? String else {
            XCTFail("Failed to clear text in XCUIElement.")
            return
        }
        
        // find how how long the string is and repeat deleting for that length
        let deleteString = String(repeating: XCUIKeyboardKey.delete.rawValue, count: stringValue.count)
        // tells the test keyboard to press the delete button
        typeText(deleteString)
    }
}


final class UltimatePortfolioUITests: XCTestCase {
    var app: XCUIApplication!
    
    
    override func setUpWithError() throws {
        continueAfterFailure = false
        // UI tests must launch the application that they test.
        app = XCUIApplication()
        
        //pass anystring
        //"enable-testing" is passed to datacontroller
        app.launchArguments = ["enable-testing"]
        app.launch()
        
    }
    
    
    
    func testAppStartsWithNavigationBar() throws {
        XCTAssertTrue(app.navigationBars.element.exists, "There should be a navigation bar when the app launches")
    }
    
    func testAppHasBasicButtonsOnLaunch() throws {
        XCTAssertTrue(app.navigationBars.buttons["Filters"].exists, "There should be a Filters button on launch")
        XCTAssertTrue(app.navigationBars.buttons["Filter"].exists, "There should be a Filter button on launch")
        XCTAssertTrue(app.navigationBars.buttons["New Issue"].exists, "There should be a New Issue button on launch")
    }
    
    func testNoIssuesAtStart() {
        XCTAssertEqual(app.cells.count, 0, "There should be 0 list rows when starting")
    }
 /*
    func testCreatingIssues() {
        for tapCount in 1...5 {
               app.buttons["New Issue"].tap()
               app.buttons["Issues"].tap()

               XCTAssertEqual(app.cells.count, tapCount, "There should be \(tapCount) rows in the list.")
           }
        
        for tapCount in (0...4).reversed() {
            app.cells.firstMatch.swipeLeft()
            app.buttons["Delete"].tap()
            
            XCTAssertEqual(app.cells.count, tapCount, "There should be \(tapCount) rows in the list.")
        }
    }
   */
    
    
    func testEditingIssueTitleUpdatesCorrectly() {
        XCTAssertEqual(app.cells.count, 0, "There should be no list rows initially.")

        app.buttons["New Issue"].tap()

        app.textFields["Enter the Issue title here"].tap()
        //calling the created clear function
        app.textFields["Enter the Issue title here"].clear()
        //tells the test keyboard what to type
        app.typeText("My New Issue")
        
        app.buttons["Issues"].tap()
        XCTAssertTrue(app.buttons["My New Issue"].exists, "A My New Issue cell should now exist.")
    }
    
    func testEditingIssuePriorityShowsIcon() {
        app.buttons["New Issue"].tap()
        app.buttons["Priority, Medium"].tap()
        app.buttons["High"].tap()

        app.buttons["Issues"].tap()

        let identifier = "New Issue High Priority"
        XCTAssert(app.images[identifier].exists, "A high-priority issue needs an icon next to it.")
    }
    
    func testAllAwardsShowLockedAlert() {
        app.buttons["Filters"].tap()
        app.buttons["Show awards"].tap()
        
        //tell me these things by their index on the screen
        for award in app.scrollViews.buttons.allElementsBoundByIndex {
            // if all elements are not on the screen. 
//            if app.windows.element.frame.contains(award.frame) == false {
//                app.swipeUp()
//            }
            
            award.tap()
            XCTAssertTrue(app.alerts["Locked"].exists, "There should be a Locked alert showing for awards.")
            app.buttons["OK"].tap()
        }
    }

    
}
